--- a/pinterest-main/index.html
+++ b/pinterest-main/index.html
@@ -100,45 +100,115 @@
         </div>
       </div>
 
-      <h1 class="mt-12 font-semibold mb-4 text-xl">
-        1. Carousel with scroll and slide-track
-      </h1>
-      <div class="slider">
-        <div class="slide-track">
-          <div class="slide bg-red-500">
+      <div class="slider mt-4">
+        <div class="slide-track custom-slide">
+          <div class="slide">
             <img
-              src="assets/img/Untitled design (4).png"
-              class="img-fluid custom-width"
+              src="assets/img/slider/apple-pay.png"
+              class="img-fluid custom-width-2"
               alt="home-img"
             />
           </div>
-          <div class="slide bg-purple-500">2</div>
-          <div class="slide bg-blue-500">3</div>
-          <div class="slide bg-indigo-500">4</div>
-          <div class="slide bg-pink-500">5</div>
-          <div class="slide bg-green-500">6</div>
-          <div class="slide bg-yellow-500">7</div>
-          <div class="slide bg-red-500">8</div>
-          <div class="slide bg-gray-500">9</div>
-
-          <div class="slide bg-blue-800">0</div>
-          <div class="slide bg-red-500">
+          <div class="slide">
             <img
-              src="assets/img/Untitled design (4).png"
-              class="img-fluid custom-width"
+              src="assets/img/slider/google.png"
+              class="img-fluid custom-width-2"
               alt="home-img"
             />
           </div>
-          <div class="slide bg-purple-500">2</div>
-          <div class="slide bg-blue-500">3</div>
-          <div class="slide bg-indigo-500">4</div>
-          <div class="slide bg-pink-500">5</div>
-          <div class="slide bg-green-500">6</div>
-          <div class="slide bg-yellow-500">7</div>
-          <div class="slide bg-red-500">8</div>
-          <div class="slide bg-gray-500 text-white">9</div>
+          <div class="slide">
+            <img
+              src="assets/img/slider/lenovo.png"
+              class="img-fluid custom-width-2"
+              alt="home-img"
+            />
+          </div>
+          <div class="slide">
+            <img
+              src="assets/img/carousel-microsoft.png"
+              class="img-fluid custom-width-2"
+              alt="home-img"
+            />
+          </div>
+          <div class="slide">
+            <img
+              src="assets/img/slider/lg.png"
+              class="img-fluid custom-width-2"
+              alt="home-img"
+            />
+          </div>
+          <div class="slide">
+            <img
+              src="assets/img/slider/microsoft.png"
+              class="img-fluid custom-width-2"
+              alt="home-img"
+            />
+          </div>
+          <div class="slide">
+            <img
+              src="assets/img/slider/samsung.png"
+              class="img-fluid custom-width-2"
+              alt="home-img"
+            />
+          </div>
+          <div class="slide">
+            <img
+              src="assets/img/slider/sony.png"
+              class="img-fluid custom-width-2"
+              alt="home-img"
+            />
+          </div>
 
-          <div class="slide bg-blue-800">0</div>
+          <!-- DUPLICATE -->
+          <div class="slide">
+            <img
+              src="assets/img/slider/apple-pay.png"
+              class="img-fluid custom-width-2"
+              alt="home-img"
+            />
+          </div>
+          <div class="slide">
+            <img
+              src="assets/img/slider/google.png"
+              class="img-fluid custom-width-2"
+              alt="home-img"
+            />
+          </div>
+          <div class="slide">
+            <img
+              src="assets/img/slider/lenovo.png"
+              class="img-fluid custom-width-2"
+              alt="home-img"
+            />
+          </div>
+          <div class="slide">
+            <img
+              src="assets/img/slider/lg.png"
+              class="img-fluid custom-width-2"
+              alt="home-img"
+            />
+          </div>
+          <div class="slide">
+            <img
+              src="assets/img/slider/microsoft.png"
+              class="img-fluid custom-width-2"
+              alt="home-img"
+            />
+          </div>
+          <div class="slide">
+            <img
+              src="assets/img/slider/samsung.png"
+              class="img-fluid custom-width-2"
+              alt="home-img"
+            />
+          </div>
+          <div class="slide">
+            <img
+              src="assets/img/slider/sony.png"
+              class="img-fluid custom-width-2"
+              alt="home-img"
+            />
+          </div>
         </div>
       </div>
       <!-- 
