--- a/pinterest-main/index.html
+++ b/pinterest-main/index.html
@@ -179,7 +179,6 @@
         
         </div>
       </div>
-    <!-- </section> -->
     <!-- Section 1 end -->
 
     <!-- section 2 -->
@@ -203,7 +202,7 @@
       <div class="row">
 
         <div class="col-md-6 mb-4">
-          <div class="card h-100 d-flex flex-row">
+          <div class="card h-100 d-flex flex-row custom-card-1">
             <div class="card-body">
               <h3 class="card-title">Search Engine Optimization</h3>
               <p class="card-subheadline">
@@ -217,8 +216,8 @@
           </div>
         </div>
 
-        <div class="col-md-6 mb-4">
-          <div class="card h-100 d-flex flex-row bg-dark">
+        <div class="col-md-6 mb-4 cc-card">
+          <div class="card h-100 d-flex flex-row custom-card">
             <div class="card-body">
               <h3 class="card-title">Pay per Click <br> Advertising</h3>
               <p class="card-subheadline">
@@ -232,8 +231,8 @@
           </div>
         </div>
 
-        <div class="col-md-6 mb-4">
-          <div class="card h-100 d-flex flex-row bg-dark">
+        <div class="col-md-6 mb-4 cc-card">
+          <div class="card h-100 d-flex flex-row custom-card">
             <div class="card-body">
               <h3 class="card-title">Social Media <br> Marketing</h3>
               <p class="card-subheadline">
@@ -248,7 +247,7 @@
         </div>
 
         <div class="col-md-6 mb-4">
-          <div class="card h-100 d-flex flex-row">
+          <div class="card h-100 d-flex flex-row custom-card-1">
             <div class="card-body">
               <h3 class="card-title">E-mail <br> Marketing</h3>
               <p class="card-subheadline">Reach your customers directly.</p>
